// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Assets > babel > transforms example test case: browser-current-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-current-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-experimental-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-experimental-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-legacy-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-legacy-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-stable-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: browser-stable-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-current-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-experimental-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-legacy-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-stable-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: electron-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: native-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: native-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: native-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: native-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-current-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-current-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-experimental-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-experimental-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-legacy-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-legacy-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-stable-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > babel > transforms example test case: node-stable-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-current-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-current-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-experimental-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-experimental-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-legacy-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-legacy-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-stable-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: browser-stable-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-current-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-experimental-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-legacy-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-stable-esm 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: electron-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: native-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: native-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: native-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: native-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-current-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-current-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-current-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-experimental-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-experimental-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-experimental-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-legacy-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-legacy-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-legacy-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-stable-cjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-stable-lib 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets > swc > transforms example test case: node-stable-mjs 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-current-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-current-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["../assets/styles-17df299b.css", "../assets/logo-c21f559f.svg", "website/src/css/custom.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(global.styles17df299b, global.logoC21f559f, global.custom);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_styles17df299b, _logoC21f559f, _custom) {
  "use strict";

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: current, Format: umd

  const json = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };
  console.log(json);
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-experimental-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-experimental-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["../assets/styles-17df299b.css", "../assets/logo-c21f559f.svg", "website/src/css/custom.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(global.styles17df299b, global.logoC21f559f, global.custom);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_styles17df299b, _logoC21f559f, _custom) {
  "use strict";

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: experimental, Format: umd

  const json = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };
  console.log(json);
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
var json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-legacy-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
var json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-legacy-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["../assets/styles-17df299b.css", "../assets/logo-c21f559f.svg", "website/src/css/custom.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(global.styles17df299b, global.logoC21f559f, global.custom);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_styles17df299b, _logoC21f559f, _custom) {
  "use strict";

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd

  var json = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };
  console.log(json);
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-stable-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: browser-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-stable-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["../assets/styles-17df299b.css", "../assets/logo-c21f559f.svg", "website/src/css/custom.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(global.styles17df299b, global.logoC21f559f, global.custom);
    global.examples = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_styles17df299b, _logoC21f559f, _custom) {
  "use strict";

  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  const json = {
    list: ["foo", "bar", "baz"],
    number: 123,
    string: "abc",
    object: {
      foo: true
    }
  };
  console.log(json);
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-current-esm 1`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-current-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: electron-current-lib 1`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-experimental-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-legacy-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: electron-stable-esm 1`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-stable-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: electron-stable-lib 1`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: electron-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: native-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: native-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: native-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: native-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Assets babel transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-current-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: node-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-current-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Assets babel transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-experimental-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: node-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-experimental-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Assets babel transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-legacy-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: node-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-legacy-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Assets babel transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-stable-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

require('../assets/styles-17df299b.css');
require('../assets/logo-c21f559f.svg');
require('website/src/css/custom.css');
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Assets babel transforms example test case: node-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets babel transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import '../assets/styles-17df299b.css';
import '../assets/logo-c21f559f.svg';
import 'website/src/css/custom.css';
const json = {
  list: ["foo", "bar", "baz"],
  number: 123,
  string: "abc",
  object: {
    foo: true
  }
};
console.log(json);
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`Assets babel transforms example test case: node-stable-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-current-esm 1`] = `
[
  "esm/index-browser-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-current-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-current-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-current-lib 1`] = `
[
  "lib/index-browser-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: current, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-current-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-current-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-current-umd 2`] = `
[
  "umd/index-browser-current-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports, require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
    else if (typeof define === "function" && define.amd) define([
        "exports",
        "../assets/styles-17df299b.css",
        "../assets/logo-c21f559f.svg",
        "website/src/css/custom.css"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {}, global.styles17Df299BCss, global.logoC21F559FSvg, global.customCss);
})(this, function(exports, _styles17df299bcss, _logoc21f559fsvg, _customcss) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    const json = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    console.log(json);
});
//# sourceMappingURL=index-browser-current-umd.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-experimental-esm 1`] = `
[
  "esm/index-browser-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-experimental-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-experimental-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-experimental-lib 1`] = `
[
  "lib/index-browser-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: experimental, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-experimental-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-experimental-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-experimental-umd 2`] = `
[
  "umd/index-browser-experimental-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports, require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
    else if (typeof define === "function" && define.amd) define([
        "exports",
        "../assets/styles-17df299b.css",
        "../assets/logo-c21f559f.svg",
        "website/src/css/custom.css"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {}, global.styles17Df299BCss, global.logoC21F559FSvg, global.customCss);
})(this, function(exports, _styles17df299bcss, _logoc21f559fsvg, _customcss) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    const json = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    console.log(json);
});
//# sourceMappingURL=index-browser-experimental-umd.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-legacy-esm 1`] = `
[
  "esm/index-browser-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
var json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-legacy-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-legacy-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-legacy-lib 1`] = `
[
  "lib/index-browser-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
var json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-legacy-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-legacy-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-legacy-umd 2`] = `
[
  "umd/index-browser-legacy-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports, require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
    else if (typeof define === "function" && define.amd) define([
        "exports",
        "../assets/styles-17df299b.css",
        "../assets/logo-c21f559f.svg",
        "website/src/css/custom.css"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {}, global.styles17Df299BCss, global.logoC21F559FSvg, global.customCss);
})(this, function(exports, _styles17df299bcss, _logoc21f559fsvg, _customcss) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    var json = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    console.log(json);
});
//# sourceMappingURL=index-browser-legacy-umd.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-stable-esm 1`] = `
[
  "esm/index-browser-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-stable-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-stable-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-stable-lib 1`] = `
[
  "lib/index-browser-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-browser-stable-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: browser-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-stable-umd 1`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: browser-stable-umd 2`] = `
[
  "umd/index-browser-stable-umd.js",
  "(function(global, factory) {
    if (typeof module === "object" && typeof module.exports === "object") factory(exports, require("../assets/styles-17df299b.css"), require("../assets/logo-c21f559f.svg"), require("website/src/css/custom.css"));
    else if (typeof define === "function" && define.amd) define([
        "exports",
        "../assets/styles-17df299b.css",
        "../assets/logo-c21f559f.svg",
        "website/src/css/custom.css"
    ], factory);
    else if (global = typeof globalThis !== "undefined" ? globalThis : global || self) factory(global.examples = {}, global.styles17Df299BCss, global.logoC21F559FSvg, global.customCss);
})(this, function(exports, _styles17df299bcss, _logoc21f559fsvg, _customcss) {
    "use strict";
    Object.defineProperty(exports, "__esModule", {
        value: true
    });
    const json = {
        list: [
            "foo",
            "bar",
            "baz"
        ],
        number: 123,
        string: "abc",
        object: {
            foo: true
        }
    };
    console.log(json);
});
//# sourceMappingURL=index-browser-stable-umd.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-current-esm 1`] = `
[
  "esm/index-electron-current-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-current-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-current-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: electron-current-lib 1`] = `
[
  "lib/index-electron-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: current, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-current-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: electron-experimental-esm 1`] = `
[
  "esm/index-electron-experimental-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-experimental-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-experimental-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: electron-experimental-lib 1`] = `
[
  "lib/index-electron-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: experimental, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-experimental-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: electron-legacy-esm 1`] = `
[
  "esm/index-electron-legacy-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-legacy-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-legacy-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: electron-legacy-lib 1`] = `
[
  "lib/index-electron-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: legacy, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-legacy-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: electron-stable-esm 1`] = `
[
  "esm/index-electron-stable-esm.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-stable-esm.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-stable-esm 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: electron-stable-lib 1`] = `
[
  "lib/index-electron-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-electron-stable-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: electron-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: native-current-lib 1`] = `
[
  "lib/index-native-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: current, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-native-current-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: native-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: native-experimental-lib 1`] = `
[
  "lib/index-native-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-native-experimental-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: native-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: native-legacy-lib 1`] = `
[
  "lib/index-native-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: legacy, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-native-legacy-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: native-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: native-stable-lib 1`] = `
[
  "lib/index-native-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-native-stable-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: native-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-current-cjs 1`] = `
[
  "cjs/index-node-current-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-current-cjs.cjs';",
]
`;

exports[`Assets swc transforms example test case: node-current-cjs 2`] = `
[
  "cjs/index-node-current-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-current-cjs.cjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-current-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-current-lib 1`] = `
[
  "lib/index-node-current-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-current-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: node-current-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-current-mjs 1`] = `
[
  "mjs/index-node-current-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: mjs
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-current-mjs.mjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-current-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-experimental-cjs 1`] = `
[
  "cjs/index-node-experimental-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-experimental-cjs.cjs';",
]
`;

exports[`Assets swc transforms example test case: node-experimental-cjs 2`] = `
[
  "cjs/index-node-experimental-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: cjs
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-experimental-cjs.cjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-experimental-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-experimental-lib 1`] = `
[
  "lib/index-node-experimental-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-experimental-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: node-experimental-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-experimental-mjs 1`] = `
[
  "mjs/index-node-experimental-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: experimental, Format: mjs
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-experimental-mjs.mjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-experimental-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-legacy-cjs 1`] = `
[
  "cjs/index-node-legacy-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-legacy-cjs.cjs';",
]
`;

exports[`Assets swc transforms example test case: node-legacy-cjs 2`] = `
[
  "cjs/index-node-legacy-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: cjs
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-legacy-cjs.cjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-legacy-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-legacy-lib 1`] = `
[
  "lib/index-node-legacy-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-legacy-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: node-legacy-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-legacy-mjs 1`] = `
[
  "mjs/index-node-legacy-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: legacy, Format: mjs
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-legacy-mjs.mjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-legacy-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-stable-cjs 1`] = `
[
  "cjs/index-node-stable-cjs-wrapper.mjs",
  "// Bundled with Packemon: https://packemon.dev
// This is an MJS wrapper for a sibling CJS file

import './index-node-stable-cjs.cjs';",
]
`;

exports[`Assets swc transforms example test case: node-stable-cjs 2`] = `
[
  "cjs/index-node-stable-cjs.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-stable-cjs.cjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-stable-cjs 3`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-stable-lib 1`] = `
[
  "lib/index-node-stable-lib.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib
"use strict";
require("../assets/styles-17df299b.css");
require("../assets/logo-c21f559f.svg");
require("website/src/css/custom.css");
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-stable-lib.js.map
",
]
`;

exports[`Assets swc transforms example test case: node-stable-lib 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;

exports[`Assets swc transforms example test case: node-stable-mjs 1`] = `
[
  "mjs/index-node-stable-mjs.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs
import "../assets/styles-17df299b.css";
import "../assets/logo-c21f559f.svg";
import "website/src/css/custom.css";
const json = {
    list: [
        "foo",
        "bar",
        "baz"
    ],
    number: 123,
    string: "abc",
    object: {
        foo: true
    }
};
console.log(json);
//# sourceMappingURL=index-node-stable-mjs.mjs.map
",
]
`;

exports[`Assets swc transforms example test case: node-stable-mjs 2`] = `
[
  "styles.css",
  "assets/styles-17df299b.css",
]
`;
